2006-12-30  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/cyrillic.el ("Cyrillic-ISO"):
	* mule/english.el ("English"):
	* mule/greek.el ("Greek"):
	Specify a native-coding-system for each of these language
	environments--since that is what is examined and relevant when
	sniffing the locale at startup. 
	* mule/mule-cmds.el (create-variant-language-environment):
	A language environment's coding-priority is a list of coding
	systems, not coding categories. Treat it as such. 

2006-12-21  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/cyrillic.el:
	* mule/cyrillic.el (iso-8859-5):
	* mule/cyrillic.el (cyrillic-koi8-r-encode-table):
	Add syntax, case support for Cyrillic; make some parentheses more
	Lispy. 

	* mule/european.el:
	Content moved to latin.el, file deleted. 
	
	* mule/general-late.el:
	If Unicode tables are to be loaded at dump time, do it here, not
	in loadup.el. 
	
	* mule/greek.el:
	Add syntax, case support for Greek. 
	
	* mule/latin.el:
	Move the content of european.el here. Change the case table
	mappings to use hexadecimal codes, to make cross reference to the
	standards easier. In all cases, take character syntax from similar
	characters in Latin-1 , rather than deciding separately what
	syntax they should take. Add (incomplete) support for case with
	Turkish. Remove description of the character sets used from the
	language environments' doc strings, since now that we create
	variant language environments on the fly, such descriptions will
	often be inaccurate. Set the native-coding-system language info
	property while setting the other coding-system properties of the
	language.
	
	* mule/misc-lang.el (ipa):
	Remove the language environment. The International Phonetic
	_Alphabet_ is not a language, it's inane to have a corresponding
	language environment in XEmacs. 
	
	* mule/mule-cmds.el (create-variant-language-environment):
	Also modify the coding-priority when creating a new language
	environment; document that. 
